--- a/Projekte 13/style.css
+++ b/Projekte 13/style.css
@@ -14,12 +14,11 @@ body {
 
     padding: 20px;
 
-    border: 1px solid #ccc;
+    border: 1px solid #75afca;
 
     border-radius: 5px;
 
-    background-color: #f9f9f9;
-
+    background-color: #dfeef5
 }
 
 input, select {
@@ -30,7 +29,7 @@ input, select {
 
     margin: 10px 0;
 
-    border: 1px solid #ccc;
+    border: 1px solid #75afca;
 
     border-radius: 5px;
 
@@ -42,7 +41,7 @@ button {
 
     padding: 10px;
 
-    background-color: #28a745;
+    background-color: #75afca;
 
     color: white;
 
@@ -56,7 +55,7 @@ button {
 
 button:hover {
 
-    background-color: #218838;
+    background-color: #75afca;
 
 }
 
